--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "devDependencies": {
         "tsx": "^4.19.3"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "@types/node": "^22.15.30"
+    }
 }
